--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Build Docker image and push to ECR
       run: |
+        aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin $AWS_ECR_URL
         docker build -t insurance-api-ecr:latest .
-        echo $AWS_ACCESS_KEY_ID | docker login -u AWS --password-stdin $AWS_ECR_URL
         docker tag insurance-api-ecr:latest $AWS_ECR_URL/insurance-api-ecr:latest
         docker push $AWS_ECR_URL/insurance-api-ecr:latest
       env:
