--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "aws-sdk": "^2.1612.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
