--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for Insurance API
 on:
   push:
     branches:
-      - main
+      - development
 
 jobs:
   build_and_push:
@@ -47,3 +47,21 @@ jobs:
 
     - name: Deploy to ECS
       run: aws ecs update-service --cluster insurance-cluster --service insurance-api-service --force-new-deployment
+
+  populate_database:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+    - name: Install dependencies
+      run: npm install
+    - name: Populate database with initial data
+      run: node scripts/populate-initial-data.js
+      env:
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASS: ${{ secrets.DB_PASS }}
